kube/finetune_gtx1070.yml
apiVersion: v1
kind: Service
metadata:
  name: frvsrganv
  labels:
    app: frvsrgan-train
spec:
  selector:
    app: frvsrgan-train
  ports:
    - protocol: TCP
      port: 8097
      targetPort: frvsrganv-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: visdom
  annotations:
    # using kubernetes/ingress-nginx controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

    # SSL
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"

    # websocket
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"

spec:
  tls:
    - hosts:
        - frvsrgan1.c.videogorillas.com
      secretName: tls-secret

  rules:
    - host: frvsrgan1.c.videogorillas.com
      http:
        paths:
          - backend:
              serviceName: frvsrganv
              servicePort: frvsrganv-port
